--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 awscli==1.27.136
+blinker==1.6.2
 boto3==1.26.135
 botocore==1.29.136
+click==8.1.3
 colorama==0.4.4
 docutils==0.16
+Flask==2.3.2
 grpcio==1.54.2
 grpcio-tools==1.54.2
+importlib-metadata==6.6.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
 jmespath==1.0.1
+MarkupSafe==2.1.2
 protobuf==4.23.0
 psutil==5.9.5
 pyasn1==0.5.0
@@ -15,3 +22,5 @@ rsa==4.7.2
 s3transfer==0.6.1
 six==1.16.0
 urllib3==1.26.15
+Werkzeug==2.3.4
+zipp==3.15.0
